Refactor location module for Clean Architecture, fix edge snapping, and enable multi-user tracking
- Removed userId dependency from the :location module to ensure true Clean Architecture decoupling.
- Implemented SessionManager in the :app module to track active users during background service broadcasts.
- Updated LocationReceiver to save GPS coordinates to the correct user's database row using SessionManager.
- Fixed GeoJsonHelper math to accurately calculate and snap the re-entry point to the polygon boundary.
- Applied a timestamp offset (-1000ms) to boundary snap points to fix the chronological sorting and line drawing order on the map.
- Resolved Hilt Dependency Injection errors by fixing cross-module imports and adding the :location project dependency in Gradle.
- Adjusted MapScreen polyline width and gap timer for better discontinuous path rendering.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,8 @@ mapsCompose = "4.4.1" # Modern Maps Compose
 playServicesMaps = "18.2.0"
 playServicesLocation = "21.3.0"
 accompanist = "0.34.0"
+appcompat = "1.7.1"
+material = "1.13.0"
 
 [libraries]
 # --- Your Existing Libraries ---
@@ -58,6 +60,8 @@ play-services-location = { group = "com.google.android.gms", name = "play-servic
 
 # Permissions
 accompanist-permissions = { group = "com.google.accompanist", name = "accompanist-permissions", version.ref = "accompanist" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 [plugins]
 # --- Your Existing Plugins ---
@@ -67,3 +71,4 @@ kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "ko
 
 # --- Added for RouteRunner ---
 hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
+android-library = { id = "com.android.library", version.ref = "agp" }
